--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="img/HexGame.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Terminal based Hex game developed with C++. Consists of multiple game modes.</p>
                 </div>
               </div>
             </a>
@@ -293,7 +293,7 @@
               <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="img/Arduino.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">I learned about Arduino circuitry and IDE via this project. Reference: Jaycar and FastLED.io</p>
                 </div>
               </div>
             </a>
@@ -304,7 +304,7 @@
               <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="img/computerVision.jpeg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Using openCV, python3 and mediapipe library to detect hand and draw the landmarks.</p>
                 </div>
               </div>
             </a>
